5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1734_2505.log
== TEST (2019-05-07 20:43:56) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=1
j=0
t=x
if(x>=-pi)and(x<=pi):
	while(j<y):
		k=k+2
		t=t-(k**3/factorial(k))
		j=j+1
print(round(t,10))		
-- OUTPUT:
-4.0409681684
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:45:01) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=1
j=0
t=x
if(x>=-pi)and(x<=pi):
	while(j<y):
		k=k+2
		t=t-(x**k/factorial(k))
		j=j+1
print(round(t,10))		
-- OUTPUT:
0.8402938089
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:45:21) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=1
j=0
t=x
if(x>=-pi)and(x<=pi):
	while(j<y):
		k=k+2
		t=-t
		t=t-(x**k/factorial(k))
		j=j+1
print(round(t,10))		
-- OUTPUT:
-2.1415927098
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:46:34) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
t=x
while(j<y):
	t=t-(x**k/factorial(k))
	k=k+2
	j=j+1
print(round(t,10))		
-- OUTPUT:
0.8402938089
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:46:44) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
t=x
while(j<y):
	t=t-(x**k/factorial(k))
	k=k+2
	j=j+1
print(round(t,10))		
-- OUTPUT:
0.8402938089
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:47:00) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
t=x
while(j<y):
	t=t-(x**k/factorial(k))
	k=k+2
	t=-t
	j=j+1
print(round(t,10))		
-- OUTPUT:
-0.9999999437
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:49:43) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
t=x
while(j<y):
	l=t-(x**k/factorial(k))
	k=k+2
	l=-l
	j=j+1
print(round(t,10))		
-- OUTPUT:
1.5707963268
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:50:07) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
t=x
while(j<y):
	l=t-(x**k/factorial(k))
	k=k+2
	l=-l
	j=j+1
print(round(l,10))		
-- OUTPUT:
-1.570792728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:52:10) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
t=x
while(j<y):
	l=t-(x**k/factorial(k))
	k=k+2
	j=j+1
print(round(l,10))		
-- OUTPUT:
1.570792728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:52:24) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
t=x
while(j<y):
	l=t-(x**k/factorial(k))
	k=k+2
	t=l
	j=j+1
print(round(l,10))		
-- OUTPUT:
0.8402938089
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 20:56:30) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
x=radians(x)
k=3
j=0
t=x
while(j<y):
	l=t-(x**k/factorial(k))
	k=k+2
	t=l
	j=j+1
print(round(l,10))		
-- OUTPUT:
0.0274121333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:26:02) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
while(j<y):
	x=x-((x**k/factorial(k)*d))
	k=k+2
	j=j+1
	d=-d
print(round(l,10))		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    print(round(l,10))		
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:26:13) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
while(j<y):
	x=x-((x**k/factorial(k)*d))
	k=k+2
	j=j+1
	d=-d
print(round(x,10))		
-- OUTPUT:
0.9303519584
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:26:34) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
x=radians(x)
k=3
j=0
d=1
while(j<y):
	x=x-((x**k/factorial(k)*d))
	k=k+2
	j=j+1
	d=-d
print(round(x,10))		
-- OUTPUT:
0.0274121336
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:45:42) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
x=radians(x)
k=3
j=0
d=1
l=0
while(j<y):
	f=x-(l*d)
	l=(x**k)/factorial(k)
	k=k+2
	j=j+1
	d=-l
print(round(f,10))		
-- OUTPUT:
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:45:58) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
x=radians(x)
k=3
j=0
d=1
l=0
while(j<y):
	f=x-(l*d)
	l=(x**k)/factorial(k)
	k=k+2
	j=j+1
	d=-l
print(round(f,10))		
-- OUTPUT:
0.0274155678
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:51:39) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x-(l*d)
	l=(x**k)/factorial(k)
	k=k+2
	j=j+1
	d=-l
print(round(f,10))		
-- OUTPUT:
1.5707963525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:51:46) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x-(l*d)
	l=(x**k)/factorial(k)
	k=k+2
	j=j+1
	d=-l
print(round(f,10))		
-- OUTPUT:
1.5707963525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:51:54) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x-(l*d)
	l=(x**k)/factorial(k)
	k=k+2
	j=j+1
	d=-l
print(round(f,10))		
-- OUTPUT:
1.5707963525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:52:07) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x-(l*d)
	l=(x**k)/factorial(k)
	k=k+2
	j=j+1
	d=-l
print(round(f,10))		
-- OUTPUT:
1.5707963525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:52:31) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x-(l*d)
	l=(x**k)/factorial(k)
	k=k+2
	j=j+1
	d=-d
print(round(f,10))		
-- OUTPUT:
1.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 22:53:31) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x-(l*d)
	l=(x**k)/factorial(k)
	k=k+2
	j=j+1
	d=-d
print(round(f,10))		
-- OUTPUT:
1.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:00:09) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x+(l*d)
	l=(x**k)/factorial(k)
	k=k+2
	j=j+1
	d=-d
print(round(f,10))		
-- OUTPUT:
1.570956768
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:01:12) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x+l
	l=(x**k)/factorial(k)*d
	k=k+2
	j=j+1
	d=-d
print(round(f,10))		
-- OUTPUT:
1.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:01:36) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x+l
	l=(x**k)/factorial(k)*d
	k=k+2
	j=j+1
	d=-d
print(round(f,10))		
-- OUTPUT:
1.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:54:08) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x+l
	l=(x**k)/factorial(k)*d
	k=k+2
	print(l)
	j=j+1
	d=-d
print(round(f,10))		
-- OUTPUT:
0.6459640975062462
-0.07969262624616703
0.004681754135318687
-0.00016044118478735975
3.598843235212084e-06
1.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:55:26) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x+l
	l=(x**k)/factorial(k)*d
	k=k+2
	print(round(l,10))
	j=j+1
	d=-d
print(round(f,10))		
-- OUTPUT:
0.6459640975
-0.0796926262
0.0046817541
-0.0001604412
3.5988e-06
1.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:57:04) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x+l
	d=-d
	l=(x**k)/factorial(k)*d
	k=k+2
	j=j+1
print(round(f,10))		
-- OUTPUT:
1.570956768
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:57:27) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x+l
	d=-d
	l=(x**k)/factorial(k)*d
	k=k+2
	j=j+1
print(round(f,10))		
-- OUTPUT:
1.570956768
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:57:38) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x+l
	d=-d
	l=(x**k)/factorial(k)*d
	k=k+2
	j=j+1
print(round(f,10))		
-- OUTPUT:
1.570956768
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 23:57:51) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x+l
	d=-d
	l=(x**k)/factorial(k)*d
	k=k+2
	j=j+1
print(round(f,10))		
-- OUTPUT:
1.570956768
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 00:00:56) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x+(l*d)
	l=(x**k)/factorial(k)
	d=-d
	k=k+2
	j=j+1
print(round(f,10))		
-- OUTPUT:
1.570956768
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 00:01:04) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x+(l*d)
	l=(x**k)/factorial(k)
	d=-d
	k=k+2
	j=j+1
print(round(f,10))		
-- OUTPUT:
1.570956768
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 00:18:59) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x-(l*d)
	l=(x**k)/factorial(k)
	d=-d
	k=k+2
	j=j+1
print(round(f,10))		
-- OUTPUT:
1.5706358856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 00:19:30) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x+(l*d)
	l=(x**k)/factorial(k)
	d=-d
	k=k+2
	j=j+1
print(round(f,10))		
-- OUTPUT:
1.570956768
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 00:19:41) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
l=0
while(j<y):
	f=x+(l*d)
	l=(x**k)/factorial(k)
	d=-d
	k=k+2
	j=j+1
print(round(f,10))		
-- OUTPUT:
1.570956768
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 10:12:00) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
g=0
while(x>j):
	z=z-(g*d)
	g=(x**k)/(facotiral(k))
	k=k+2
	j=j+1
	d=-d
z=x-z	
print(round(z,10))	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    z=z-(g*d)
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 10:12:00) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
g=0
while(x>j):
	z=z-(g*d)
	g=(x**k)/(facotiral(k))
	k=k+2
	j=j+1
	d=-d
z=x-z	
print(round(z,10))	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    z=z-(g*d)
NameError: name 'z' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 10:12:37) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
g=0
z=0
while(x>j):
	z=z-(g*d)
	g=(x**k)/(facotiral(k))
	k=k+2
	j=j+1
	d=-d
z=x-z	
print(round(z,10))	
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    g=(x**k)/(facotiral(k))
NameError: name 'facotiral' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 10:12:58) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
k=3
j=0
d=1
g=0
z=0
while(x>j):
	z=z-(g*d)
	g=(x**k)/(factorial(k))
	k=k+2
	j=j+1
	d=-d
z=x-z	
print(round(z,10))	
		
-- OUTPUT:
0.9248322293
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:33:27) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
g=0
s=0
d=0
f=1
k=1
while(g<y):
	s=s+(d*f)
	k=k+2
	d=((x**k)/((factorial(k))))
	f=-f
	g=g+1
	
print(round(s,10))	
	
	
-- OUTPUT:
-0.5707927842
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:34:04) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
g=0
s=x
d=0
f=1
k=1
while(y>g):
	s=s+(d*f)
	k=k+2
	d=((x**k)/((factorial(k))))
	f=-f
	g=g+1
	
print(round(s,10))	
	
	
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:34:30) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
g=0
s=x
d=0
f=1
k=1
while(y>g):
	s=s+(d*f)
	k=k+2
	d=((x**k)/((factorial(k))))
	f=-f
	g=g+1
	
print(round(s,10))	
	
	
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 10:34:37) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
g=0
s=x
d=0
f=1
k=1
while(y>g):
	s=s+(d*f)
	k=k+2
	d=((x**k)/((factorial(k))))
	f=-f
	g=g+1
	
print(round(s,10))	
	
	
-- OUTPUT:
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 10:34:47) 
-- CODE:
from math import*
x=eval(input("coloque o angulo: "))
y=eval(input("coloque o numero de serie: "))
g=0
s=x
d=0
f=1
k=1
while(y>g):
	s=s+(d*f)
	k=k+2
	d=((x**k)/((factorial(k))))
	f=-f
	g=g+1
	
print(round(s,10))	
	
	
-- EXECUTION TIME:
0.201479
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
